--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_speech: ^2.0.0
+  speech_to_text: 5.6.1
 
 dev_dependencies:
   flutter_test:
@@ -38,7 +38,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  assets:
+    - assets/bg.jpg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
