Revert "dio post / dio file upload"
This reverts commit 64b43692475bf7d7279c0c9db19fd2cc10336b18.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mizzi47.smart_tasbih">
-    <uses-permission android:name="android.permission.VIBRATE"/>
    <application
-        android:label="Qul Tasbih"
+        android:label="smart_tasbih"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
